--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
-#secrets
-gemcap-analysis.pem
-
 # Compiled output
 /dist
 /tmp
@@ -15,7 +12,7 @@ npm-debug.log
 yarn-error.log
 
 # IDEs and editors
-/.idea
+.idea/
 .project
 .classpath
 .c9/
@@ -43,6 +40,3 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
-
-# Archives
-/api/backup.tar
